# haskell-workflow

./: LICENSE  README.md  workflow.cabal
src/Azr/Experiments/: Workflow.hs  WorkflowFree.hs  WorkflowOperational.hs
