name:                workflow
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/aztecrex/haskell-workflow#readme
license:             BSD3
license-file:        LICENSE
author:              Greg Wiley
maintainer:          aztec.rex@jammm.com
copyright:           2016 Greg Wiley
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:
    Azr.Experiments.Workflow
  other-modules:
  build-depends:
    base >= 4.7 && < 5,
    mtl
  default-language:    Haskell2010

test-suite workflow-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is: Spec.hs
  build-depends:
    base,
    workflow
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/aztecrex/haskell-workflow
